# PySoNet

./: Dockerfile  README.md  pyproject.toml
config/: settings.py  urls.py
src/: routers.py  yasg.py
src/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20200930_0109.py  0003_auto_20200930_1528.py
